--- a/KoreanAirTracker.ipynb
+++ b/KoreanAirTracker.ipynb
@@ -12,7 +12,8 @@
     "import sys\n",
     "from bs4 import BeautifulSoup\n",
     "import time\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -40,17 +41,65 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/cyang/coding/projects/flight-reminder/venv/bin:/usr/local/opt/python/libexec/bin:/Users/cyang/.rvm/gems/ruby-2.2.5/bin:/Users/cyang/.rvm/gems/ruby-2.2.5@global/bin:/Users/cyang/.rvm/rubies/ruby-2.2.5/bin:/usr/local/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Library/TeX/texbin:/opt/X11/bin:/Users/cyang/.rvm/bin\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!echo $PATH"
+    "def search_korean_air_once(driver, orig, dest, date):\n",
+    "    time.sleep(0.4)\n",
+    "    cnt = 0\n",
+    "    while cnt < 10:\n",
+    "        try:\n",
+    "            oneWayRadioBtn = driver.find_element_by_xpath('//*[@id=\"oneway\"]')\n",
+    "            oneWayRadioBtn.click()\n",
+    "        except Exception as e:\n",
+    "            time.sleep(np.random.uniform(low=3, high=7))\n",
+    "            cnt += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    fromInput = driver.find_element_by_xpath('//*[@id=\"from-to-chooser\"]/div[2]/ul/li/div/div/div/input')\n",
+    "    fromInput.clear()\n",
+    "    time.sleep(0.7)\n",
+    "    send_keys_delay_random(fromInput, orig)\n",
+    "\n",
+    "    toInput = driver.find_element_by_xpath('//*[@id=\"from-to-chooser\"]/div[2]/ul/li[2]/div/div/div/input')\n",
+    "    toInput.clear()\n",
+    "    time.sleep(0.3)\n",
+    "    send_keys_delay_random(toInput, dest)\n",
+    "\n",
+    "    dateInput = driver.find_element_by_xpath('//*[@id=\"from-to-chooser\"]/div[2]/ul/li[3]/div/input')\n",
+    "    dateInput.clear()\n",
+    "    time.sleep(0.9)\n",
+    "    send_keys_delay_random(dateInput, date)\n",
+    "\n",
+    "    time.sleep(1.2)\n",
+    "    findFlightsBtn = driver.find_element_by_xpath('//*[@id=\"submit\"]')\n",
+    "    findFlightsBtn.click()\n",
+    "\n",
+    "    time.sleep(2.11)\n",
+    "    # airMessageCheckBox = driver.find_element_by_xpath('//*[@id=\"airpmessage-checkbox\"]')\n",
+    "    # airMessageCheckBox.click()\n",
+    "    # time.sleep(0.521)\n",
+    "    airMessageConfirmBtn = driver.find_element_by_xpath('//*[@id=\"btnModalPopupYes\"]')\n",
+    "    airMessageConfirmBtn.click()\n",
+    "    time.sleep(1.6)\n",
+    "    cnt = 0\n",
+    "    while cnt < 10:\n",
+    "        notFoundMessageBtnExist = driver.find_elements_by_xpath('//*[@id=\"btnModalPopupYes\"]')\n",
+    "        if not notFoundMessageBtnExist:\n",
+    "            cnt += 1\n",
+    "            time.sleep(np.random.uniform(low=2, high=4))\n",
+    "        else:\n",
+    "            break\n",
+    "            \n",
+    "    if not notFoundMessageBtnExist:\n",
+    "        t = datetime.now().strftime(\"%d-%b-%Y (%H:%M:%S.%f)\")\n",
+    "        print(\"[{}] Found flight for {}-{} on {}.\".format(t, orig, dest, date))\n",
+    "        return True\n",
+    "    else:\n",
+    "        notFoundMessageBtn = notFoundMessageBtnExist[0]\n",
+    "        notFoundMessageBtn.click()\n",
+    "        return False"
    ]
   },
   {
@@ -59,8 +108,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome()\n",
-    "driver.delete_all_cookies()"
+    "def search_korean_air_second_round(driver, orig, dest, date):\n",
+    "    cnt = 0\n",
+    "    while cnt < 5:\n",
+    "        try:\n",
+    "            oneWayRadioBtn = driver.find_element_by_xpath('//*[@id=\"from-to-chooser\"]/div[1]/ul/li/input')\n",
+    "        except Exception as e:\n",
+    "            time.sleep(np.random.uniform(low=2, high=4))\n",
+    "        else:\n",
+    "            break\n",
+    "    oneWayRadioBtn.click()\n",
+    "    \n",
+    "    fromInput = driver.find_element_by_xpath('//*[@id=\"boundList\"]/ul/li[1]/div/div/div/input')\n",
+    "    fromInput.clear()\n",
+    "    time.sleep(0.7)\n",
+    "    send_keys_delay_random(fromInput, orig)\n",
+    "    time.sleep(1.1)\n",
+    "    \n",
+    "    toInput = driver.find_element_by_xpath('//*[@id=\"boundList\"]/ul/li[2]/div/div/div/input')\n",
+    "    toInput.clear()\n",
+    "    time.sleep(0.91)\n",
+    "    send_keys_delay_random(toInput, dest)\n",
+    "    time.sleep(0.21)\n",
+    "    \n",
+    "    dateInput = driver.find_element_by_xpath('//*[@id=\"boundList\"]/ul/li[3]/div/input')\n",
+    "    dateInput.clear()\n",
+    "    time.sleep(0.9)\n",
+    "    send_keys_delay_random(dateInput, date)\n",
+    "    \n",
+    "    time.sleep(0.72)\n",
+    "    try:\n",
+    "        currencyUSDRadioBtn = driver.find_element_by_xpath('//*[@id=\"currency_USD\"]')\n",
+    "        currencyUSDRadioBtn.click()\n",
+    "    except Exception as e:\n",
+    "        pass\n",
+    "    time.sleep(1.5)\n",
+    "    submitBtn = driver.find_element_by_xpath('//*[@id=\"submit\"]')\n",
+    "    submitBtn.click()\n",
+    "    \n",
+    "    time.sleep(2.11)\n",
+    "    # //*[@id=\"btnModalPopupYes\"]\n",
+    "    airMessageConfirmBtn = driver.find_element_by_xpath('//*[@id=\"btnModalPopupYes\"]')\n",
+    "    airMessageConfirmBtn.click()\n",
+    "    time.sleep(1.6)\n",
+    "    cnt = 0\n",
+    "    while cnt < 10:\n",
+    "        notFoundMessageBtnExist = driver.find_elements_by_xpath('//*[@id=\"btnModalPopupYes\"]')\n",
+    "        if not notFoundMessageBtnExist:\n",
+    "            cnt += 1\n",
+    "            time.sleep(np.random.uniform(low=2, high=4))\n",
+    "        else:\n",
+    "            break\n",
+    "            \n",
+    "    if not notFoundMessageBtnExist:\n",
+    "        t = datetime.now().strftime(\"%d-%b-%Y (%H:%M:%S.%f)\")\n",
+    "        print(\"[{}] Found flight for {}-{} on {}.\".format(t, orig, dest, date))\n",
+    "        return True\n",
+    "    else:\n",
+    "        notFoundMessageBtn = notFoundMessageBtnExist[0]\n",
+    "        notFoundMessageBtn.click()\n",
+    "        return False"
    ]
   },
   {
@@ -69,7 +176,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.set_window_size(1024, 600)"
+    "def get_flight_info_from_flight_item_html(html_str):\n",
+    "    soup = BeautifulSoup(html_str, 'html.parser')\n",
+    "    flight_fare = soup.find(class_='flight-fare-passenger-type').text.strip()\n",
+    "    if 'unavailable' in flight_fare:\n",
+    "        return None\n",
+    "    print('flight_fare: {}'.format(flight_fare))\n",
+    "    flight_summary = soup.find(class_='flight-summary')\n",
+    "#     flight_date = flight_summary.find(class_='flight-date').text.strip()\n",
+    "#     print('flight_date: {}'.format(flight_date))\n",
+    "#     flight_time = flight_summary.find(class_='flight-time').text.strip()\n",
+    "#     print('flight_time: {}'.format(flight_time))\n",
+    "    flight_total_time = flight_summary.find(class_='flight-total-time').text.strip()\n",
+    "    print('flight_total_time: {}'.format(flight_total_time))\n",
+    "    flight_stop = flight_summary.find(class_='flight-stop').text.strip()\n",
+    "    print('flight_stop: {}'.format(flight_stop))\n",
+    "    flight_number = soup.find(class_='flight')['data-flight-number'].strip()\n",
+    "    print('flight_number: {}'.format(flight_number))\n",
+    "    flight_class = soup.find(class_='planeType').text.strip()\n",
+    "    print('flight_class: {}'.format(flight_class))\n",
+    "    flight_route_from, flight_from_time = soup.find(class_='route from').text.strip().split()\n",
+    "    flight_route_to, flight_to_time = soup.find(class_='route to').text.strip().split()\n",
+    "    print('{} {} -> {} {}'.format(flight_route_from, flight_from_time, flight_route_to, flight_to_time))\n",
+    "    result = {\n",
+    "        'flight_fare': flight_fare,\n",
+    "        'flight_duration': flight_total_time,\n",
+    "        'flight_stop': flight_stop,\n",
+    "        'flight_number': flight_number,\n",
+    "        'flight_class': flight_class,\n",
+    "        'flight_route_from': flight_route_from,\n",
+    "        'flight_route_to': flight_route_to,\n",
+    "        'flight_from_time': flight_from_time,\n",
+    "        'flight_to_time': flight_to_time,\n",
+    "        'timestamp': datetime.now().strftime(\"%d-%b-%Y (%H:%M:%S.%f)\")\n",
+    "    }\n",
+    "    return result"
    ]
   },
   {
@@ -78,9 +219,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://www.koreanair.com/global/en.html\"\n",
-    "driver.get(url)\n",
-    "time.sleep(20)"
+    "def get_korean_air_flight_info(driver, orig, dest, date):\n",
+    "    time.sleep(2.11)\n",
+    "    continueBtn = driver.find_element_by_xpath('/html/body/div[3]/div/div/div[2]/button')\n",
+    "    continueBtn.click()\n",
+    "    cnt = 0\n",
+    "    time.sleep(np.random.uniform(low=2, high=6))\n",
+    "    while cnt < 5:\n",
+    "        try:\n",
+    "            header = driver.find_element_by_xpath('//*[@id=\"other-pannel\"]/div[1]')\n",
+    "        except Exception as e:\n",
+    "            time.sleep(np.random.uniform(low=2, high=6))\n",
+    "            cnt += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    flight_items = driver.find_elements_by_class_name('flightItem')\n",
+    "    flight_info_list = []\n",
+    "    for flight_item in flight_items:\n",
+    "        temp_html = flight_item.get_attribute('innerHTML')\n",
+    "        flight_info = get_flight_info_from_flight_item_html(temp_html)\n",
+    "        if flight_info is not None:\n",
+    "            flight_info_list.append(flight_info)\n",
+    "    return flight_info_list"
    ]
   },
   {
@@ -89,37 +249,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bookFlightRadioBtn = driver.find_element_by_xpath('//*[@id=\"oneway\"]')\n",
-    "# bookFlightRadioButton = driver.find_element_by_xpath('//*[@id=\"from-to-chooser\"]/div[1]/ul/li[1]/label')\n",
-    "bookFlightRadioBtn.click()\n",
-    "time.sleep(1)\n",
-    "\n",
-    "fromInput = driver.find_element_by_xpath('//*[@id=\"from-to-chooser\"]/div[2]/ul/li/div/div/div/input')\n",
-    "fromInput.clear()\n",
-    "time.sleep(0.7)\n",
-    "send_keys_delay_random(fromInput, 'Seoul/Incheon(ICN)')\n",
-    "\n",
-    "toInput = driver.find_element_by_xpath('//*[@id=\"from-to-chooser\"]/div[2]/ul/li[2]/div/div/div/input')\n",
-    "toInput.clear()\n",
-    "time.sleep(0.3)\n",
-    "send_keys_delay_random(toInput, 'Shenyang(SHE)')\n",
-    "\n",
-    "dateInput = driver.find_element_by_xpath('//*[@id=\"from-to-chooser\"]/div[2]/ul/li[3]/div/input')\n",
-    "dateInput.clear()\n",
-    "time.sleep(0.9)\n",
-    "send_keys_delay_random(dateInput, '2020-08-20')\n",
-    "\n",
-    "time.sleep(1.2)\n",
-    "findFlightsBtn = driver.find_element_by_xpath('//*[@id=\"submit\"]')\n",
-    "findFlightsBtn.click()\n",
-    "\n",
-    "time.sleep(2.11)\n",
-    "# airMessageCheckBox = driver.find_element_by_xpath('//*[@id=\"airpmessage-checkbox\"]')\n",
-    "# airMessageCheckBox.click()\n",
-    "# time.sleep(0.521)\n",
-    "airMessageConfirmBtn = driver.find_element_by_xpath('//*[@id=\"btnModalPopupYes\"]')\n",
-    "airMessageConfirmBtn.click()"
+    "def search_korean_air_date_range(orig, dest, dates):\n",
+    "    driver = webdriver.Chrome()\n",
+    "    driver.delete_all_cookies()\n",
+    "    driver.set_window_size(1024, 600)\n",
+    "    url = \"https://www.koreanair.com/global/en.html\"\n",
+    "    driver.get(url)\n",
+    "    time.sleep(20)\n",
+    "    results = {}\n",
+    "    for i, date in enumerate(dates):\n",
+    "        params = {\n",
+    "            'orig': orig,\n",
+    "            'dest': dest,\n",
+    "            'date': date\n",
+    "        }\n",
+    "        if i == 0:\n",
+    "            result = search_korean_air_once(driver, **params)\n",
+    "        else:\n",
+    "            result = search_korean_air_second_round(driver, **params)\n",
+    "        if result:\n",
+    "            info = get_korean_air_flight_info(driver, **params)\n",
+    "            if len(info) > 0:\n",
+    "                results[date] = info\n",
+    "    driver.quit()\n",
+    "    return results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'orig': 'Seoul/Incheon(ICN)',\n",
+    "    'dest': 'Shenyang(SHE)',\n",
+    "    'dates': ['2020-08-21', '2020-11-27']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[05-Jul-2020 (21:01:56.353740)] Found flight for Seoul/Incheon(ICN)-Shenyang(SHE) on 2020-11-27.\n",
+      "flight_fare: KRW 249,000   Adult\n",
+      "flight_total_time: 1h 55m\n",
+      "flight_stop: Non-Stop\n",
+      "flight_number: KE831\n",
+      "flight_class: B777-300  Open new window for the fleet information\n",
+      "Seoul/Incheon(ICN) 08:50 -> Shenyang(SHE) 09:45\n",
+      "\n",
+      "\n",
+      "===============\n",
+      "Results:\n",
+      "----------\n",
+      "\n",
+      "{'2020-11-27': [{'flight_fare': 'KRW 249,000\\xa0 \\xa0Adult', 'flight_duration': '1h 55m', 'flight_stop': 'Non-Stop', 'flight_number': 'KE831', 'flight_class': 'B777-300\\xa0 Open new window for the fleet information', 'flight_route_from': 'Seoul/Incheon(ICN)', 'flight_route_to': 'Shenyang(SHE)', 'flight_from_time': '08:50', 'flight_to_time': '09:45'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = search_korean_air_date_range(**params)\n",
+    "print('\\n\\n===============\\nResults:\\n----------\\n')\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get_flight_info_from_flight_item_html(results['2020-11-27'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# soup = BeautifulSoup(results['2020-11-27'][1], 'html.parser')\n",
+    "# print(soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
